@@ -23,6 +23,7 @@
     text: black;
     title-bg: linen;
     title-border: orange;
+    watermark: gray;
 }
 #fonts() {
     code: ui-monospace, 'Cascadia Code', Menlo, 'DejaVu Sans Mono', monospace;
@@ -51,6 +52,7 @@
 }
 #sizes() {
     exception-label-min-width: 10rem;
+    footer-height: 1rem;
     media-break: 680px;
     message-max-width: 16rem;
     nav-context-width: 8rem;
@@ -71,7 +73,7 @@
     box-sizing: border-box;
 }
 html {
-    height: 100%;
+    height: 100%; overflow: hidden;
 }
 html.dark {
     color-scheme: dark;
@@ -82,15 +84,22 @@ html.light {
 body {
     background-image: #grads[body-bg]; margin: 0; padding: 0;
 }
-header {
-    margin: 0 0.5rem; position: sticky; top: 0; z-index: 3;
+header, footer {
+    padding: 0 0.5rem; width: 100%; z-index: 3;
     @media (max-width: #sizes[media-break]) {
         margin: 0;
     }
 }
+header {
+    position: sticky; top: 0;
+}
+footer {
+    position: absolute; bottom: 0;
+}
 .frame {
-    bottom: 0; overflow: auto; position: fixed; right: 0.5rem;
-    top: #sizes[nav-header-height]; z-index: 2;
+    bottom: #sizes[footer-height]; padding-bottom: 0.5rem;
+    overflow: auto; position: fixed;
+    right: 0.5rem; top: #sizes[nav-header-height]; z-index: 2;
 }
 .frame.link-display-both {
     left: #sizes[frame-left-both];
@@ -368,7 +377,7 @@ header {
         li.global {
             display: block; margin: 0; padding: 1rem 0; width: 100%;
             a, .drop-menu {
-                display: inline-block; padding: 1rem 1.25rem;
+                display: inline-block; padding: 1rem 1rem;
                 position: relative; width: 100%;
             }
             .nav-panel {
@@ -432,6 +441,28 @@ header {
 .sidebar.link-display-text::after {
     width: #sizes[sidebar-text];
 }
+.messages-panel {
+    bottom: 1rem; position: absolute; right: 1rem;
+    .message-item {
+        background: #colours[message-bg];
+        border: 2px solid #colours[message-border]; border-radius: 5px;
+        box-shadow: 3px 3px 3px #colours[panel-shadow];
+        color: #colours[message-text]; font-family: #fonts[cursive];
+        opacity: 1; position: relative; margin-top: 1rem;
+        max-width: #sizes[message-max-width]; padding: 0.5rem;
+        transition: opacity 1s; z-index: 3;
+    }
+    .message-item.fade {
+        opacity: 0;
+    }
+    .message-item.hide {
+        display: none;
+    }
+}
+.version-number {
+    color: #colours[watermark]; font-family: #fonts[system]; font-size: 0.8rem;
+    opacity: 0.8;
+}
 .documentation {
     font-family: #fonts[system]; padding-top: 0.5rem;
     h1 {
@@ -453,24 +484,6 @@ header {
 .file-preview {
     p, pre {
         font-size: 0.8rem; line-height: 0.5rem;
-    }
-}
-.messages-panel {
-    bottom: 1rem; position: absolute; right: 1rem;
-    .message-item {
-        background: #colours[message-bg];
-        border: 2px solid #colours[message-border]; border-radius: 5px;
-        box-shadow: 3px 3px 3px #colours[panel-shadow];
-        color: #colours[message-text]; font-family: #fonts[cursive];
-        opacity: 1; position: relative; margin-top: 1rem;
-        max-width: #sizes[message-max-width]; padding: 0.5rem;
-        transition: opacity 1s; z-index: 3;
-    }
-    .message-item.fade {
-        opacity: 0;
-    }
-    .message-item.hide {
-        display: none;
     }
 }
 .modal .filemanager {
